--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOUD</title>
+    <title>Loja Do Lúcio</title>
     <meta name="description" content="bar">
 
 </head>
@@ -17,9 +17,11 @@
 
 
 </header>
-<h1>Loja do Lucio</h1>
-<p>Tudo a preço de uma alma</p>
+<h1>Loja do Lúcio</h1>
+<p>Temos tudo que procurar</p>
 
+
+<img src="/img/lolja.png" alt="imagem Logo da Loja" width="500"
 
 <main> 
 
