--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 <body>
 
 <header>
+<h1>Loja do Lúcio</h1>
+<p>Temos tudo que procurar</p>
 
+
+<img src="/img/lolja.png" alt="imagem Logo da Loja" width="500"loading="agear">
+<h2 class="abertura">Promoções do dia</h2>
+<p>farofá por 19.90</p>
+<main> 
 
 
 
 
 </header>
-<h1>Loja do Lúcio</h1>
-<p>Temos tudo que procurar</p>
-
-
-<img src="/img/lolja.png" alt="imagem Logo da Loja" width="500"
-
-<main> 
-
 
 
 
