--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Do Lúcio</title>
     <meta name="description" content="bar">
-
-</head>
-
+<link rel="stylesheet" href="style.css">
 <body>
 
 <header>
@@ -34,4 +32,4 @@
 <fouter></fouter>
 
 </body>
-<html>
+</html>
